@@ -1,0 +1,12 @@
+[DEFAULT]
+lens=XymonAlerting
+pattern=.*/alerts.d/.*
+
+[force_page]
+name=enforce PAGE=somedomain.tld
+explanation=add a PAGE=somedomain.tld filter to each alerting rule
+type=set
+expr=$file/*/filters/
+key=PAGE
+value=somedomain.tld
+
