@@ -1,0 +1,12 @@
+HOST=somehost.somedomain.tld SERVICE=cpu
+  MAIL "email@somedomain.tld"
+  STOP
+
+PAGE=somedomain.tld HOST=otherhost.somedomain.tld SERVICE=procs
+  MAIL "other.email@somedomain.tld"
+  STOP
+
+HOST=otherhost.somedomain.tld SERVICE=procs
+  MAIL "other.email@somedomain.tld"
+  STOP
+
